--- a/src/index.scss
+++ b/src/index.scss
@@ -8,11 +8,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-weight: constants.$secondary-font-weight;
-  font-size: constants.$secondary-font-size;
+  font-weight: constants.$primary-font-weight;
+  font-size: constants.$primary-font-size;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+main {
+  position: absolute;
+  top: constants.$header-vh;
 }
