chat layout: many fixes required, project should be reworked

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -28,8 +28,6 @@ $height: 50px - 2 * $vertical-padding;
 
   &.chat {
     border-radius: 20px;
-    width: calc(
-      constants.$chat-width / 2 - constants.$chat-buttons-gap / 2  - 2 * $horizontal-padding
-    )
+    width: 185px;
   }
 }
