--- a/src/pages/ChatPage/Input/styles.module.scss
+++ b/src/pages/ChatPage/Input/styles.module.scss
@@ -1,15 +1,28 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+@use "../../../utils/constants";
 
-  .textField {
-    width: 750px;
-  }
+$button-width: 200px;
+$grid-horizontal-gap: 10px;
+$grid-vertical-gap: 20px;
 
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
+.input {
+    display: grid;
+    grid-template-columns: constants.$chat-input-width $button-width;
+    grid-template-rows: repeat(3, 1fr);
+    gap: $grid-horizontal-gap $grid-vertical-gap;
+
+    height: 100%;
+
+    textarea {       
+        grid-column: 1;
+        grid-row: 1 / 4;
+
+        font-size: constants.$primary-font-size;
+        resize: none;
+    }
+
+    .clip {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }   
 }
