--- a/src/pages/ChatPage/styles.module.scss
+++ b/src/pages/ChatPage/styles.module.scss
@@ -1,31 +1,54 @@
 @use "../../utils/constants";
 
-$wrapper-horizontal-margin: calc(
-  (100vw - constants.$chat-width) / 2
+$input-height: 200px;
+$input-vertical-padding: 20px;
+
+$horizontal-padding: calc(
+  50vw - constants.$chat-input-width / 2
 );
-$messages-gap: 25px;
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+@mixin customPadding($only-left: true) {
+  @if $only-left == true {
+    padding-left: $horizontal-padding;
+  } 
+  @else {
+    padding: 0 $horizontal-padding;
+  }
+}
 
-  padding: 0 $wrapper-horizontal-margin;
-
-  width: constants.$chat-width;
+.chatWrapper {
+  display: grid;
   height: calc(100vh - constants.$header-vh);
 
-  background: constants.$gray;
-
   .messages {
-    display: flex;
-    flex-direction: column;
-    gap: $messages-gap;
+    overflow-y: auto;
+    flex-direction: column-reverse;
 
-    width: 100%;
+    font-size: constants.$secondary-font-size;
+    font-weight: constants.$secondary-font-weight;
+    color: constants.$dark-blue;
 
     .message {
+      @include customPadding($only-left: false);
+      width: constants.$chat-input-width;
 
+      &.green {
+        background: constants.$light-green;
+      }
     }
+  }
+
+  .input {
+    @include customPadding;
+
+    height: $input-height;
+    width: calc(100vw - $horizontal-padding);
+    
+    align-self: flex-end;
+    align-items: center;
+
+    padding-block: $input-vertical-padding;
+
+    background: constants.$blue;
   }
 }
