--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -15,6 +15,7 @@ $content-z: 2;
 $interface-z: 3;
 
 // colors
+$light-green: rgba(113, 191, 68, 0.3);
 $green: #71BF44;
 $blue: #00AEEF;
 $light-blue: #00679f;
@@ -23,6 +24,5 @@ $gray: #CECECE;
 $dark-blue: #1A2D74;
 $text: #FFFFFF;
 
-// chat 
-$chat-width: 50vw;
-$chat-buttons-gap: 100px;
+// char
+$chat-input-width: 800px;
