--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -20,7 +20,7 @@ $green: #71BF44;
 $blue: #00AEEF;
 $light-blue: #00679f;
 $aquamarine: #81DDF1;
-$gray: #CECECE;
+$gray: #C0C0C0;
 $dark-blue: #1A2D74;
 $text: #FFFFFF;
 
