--- a/src/pages/InfoPage/styles.module.scss
+++ b/src/pages/InfoPage/styles.module.scss
@@ -1,11 +1,7 @@
 @use "../../utils/constants";
 
-$padding-top: 100px;
-
-$inner-gap: 30px;
-$outer-gap: 50px;
-
 $info-block-width: 750px;
+$info-padding-top: 60px;
 
 $guide-block-width: 900px;
 $guide-step-width: 400px;
@@ -14,134 +10,106 @@ $guide-step-padding: 10px;
 $path-border: 4px;
 $path-width: calc($guide-block-width / 2 - $guide-step-width - 2 * $path-border);
 
-@mixin vertical-flexbox($gap) {
-  display: flex;
-  flex-direction: column;
-  gap: $gap;
-}
+.summary {
+  width: $info-block-width;
+  color: constants.$dark-blue;
 
-@mixin with-title {
-  .title {
-    text-align: center;
-    font-size: constants.$header-font-size;
+  padding-top: $info-padding-top;
 
-    .green {
-      color: constants.$green;
-    }
-  }
-}
-
-.wrapper {
-  @include vertical-flexbox($outer-gap);
-  position: absolute;
-
-  width: 100vw;
-  padding-top: $padding-top;
-  padding-bottom: $padding-top; // to create some space in the bottom
-
+  text-align: center;
   align-items: center;
+}
 
-  .summary {
-    @include vertical-flexbox($inner-gap);
-    @include with-title;
+.guide {
+  width: $guide-block-width;
 
-    width: $info-block-width;
-    color: constants.$dark-blue;
+  table {
+    width: 100%;
+    margin-top: 10px;
 
     text-align: center;
-    align-items: center;
-  }
-
-  .guide {
-    @include vertical-flexbox($inner-gap);
-    @include with-title;
-
-    width: $guide-block-width;
-
-    table {
-      width: 100%;
-      margin-top: 10px;
-
-      text-align: center;
-      
-      &, td {
-        border: 1px solid constants.$text;
-        border-collapse: collapse;
-      }
-
-      td {
-        height: 50px;
-        width: 50%;
-      }
+    
+    &, td {
+      border: 1px solid constants.$text;
+      border-collapse: collapse;
     }
 
-    .step {
+    td {
+      height: 50px;
+      width: 50%;
+    }
+  }
+
+  .step {
+    position: relative;
+
+    width: $guide-step-width - 2 * $guide-step-padding;
+    padding: $guide-step-padding;
+
+    background-color: constants.$blue;
+    color: constants.$text;
+
+    .content {
       position: relative;
+      z-index: constants.$content-z;
+    }
 
-      width: $guide-step-width - 2 * $guide-step-padding;
-      padding: $guide-step-padding;
+    .path {
+      position: absolute;
 
-      background-color: constants.$blue;
-      color: constants.$text;
+      top: calc(50% - $path-border);
 
-      .content {
-        position: relative;
-        z-index: constants.$content-z;
-      }
+      height: 0;
+      width: $path-width;
+
+      z-index: constants.$background-z;
+
+      border: $path-border solid constants.$blue;
+
+      align-self: flex-start;
+      justify-self: center;
+    }
+
+    .mainPath {
+      position: absolute;
+
+      top: 0;
+
+      height: 100%;
+      width: 0;
+
+      z-index: constants.$background-z;
+
+      border-left: $path-border solid constants.$blue;
+      border-right: $path-border solid constants.$blue;;
+    }
+
+    &.left {
+      align-self: flex-start;
 
       .path {
-        position: absolute;
-
-        top: calc(50% - $path-border);
-
-        height: 0;
-        width: $path-width;
-
-        z-index: constants.$background-z;
-
-        border: $path-border solid constants.$blue;
-
-        align-self: flex-start;
-        justify-self: center;
+        margin-left: $guide-step-width - $guide-step-padding;
       }
 
       .mainPath {
-        position: absolute;
+        margin-left: calc($guide-block-width / 2 - $path-border / 2 - $guide-step-padding);
+      }
+    }
 
-        top: 0;
-
-        height: 100%;
-        width: 0;
-
-        z-index: constants.$background-z;
-
-        border-left: $path-border solid constants.$blue;
-        border-right: $path-border solid constants.$blue;;
+    &.right {
+      align-self: flex-end;
+      
+      .path {
+        margin-left: - $guide-step-padding - $path-border * 2 - $path-width;
       }
 
-      &.left {
-        align-self: flex-start;
-
-        .path {
-          margin-left: $guide-step-width - $guide-step-padding;
-        }
-
-        .mainPath {
-          margin-left: calc($guide-block-width / 2 - $path-border / 2 - $guide-step-padding);
-        }
-      }
-
-      &.right {
-        align-self: flex-end;
-        
-        .path {
-          margin-left: - $guide-step-padding - $path-border * 2 - $path-width;
-        }
-
-        .mainPath {
-          margin-left: calc(-1 * ($guide-step-padding + $path-border / 2 + $path-width + 2 * $path-border));
-        }
+      .mainPath {
+        margin-left: calc(-1 * ($guide-step-padding + $path-border / 2 + $path-width + 2 * $path-border));
       }
     }
   }
 }
+
+// .howItWorks {
+  
+// }
