--- a/src/pages/SupportPage/styles.module.scss
+++ b/src/pages/SupportPage/styles.module.scss
@@ -3,8 +3,13 @@ $questions-block-title-font-size: 40px;
 
 .questions {
     width: $questions-block-width;
+    line-height: 22px;
 
     .title {
+        line-height: 60px;
+    }
+
+    .questionTitle {
         font-size: $questions-block-title-font-size;
     }
 }
