--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -16,13 +16,13 @@ $interface-z: 3;
 
 // colors
 $light-green: rgba(113, 191, 68, 0.3);
-$green: #71BF44;
-$blue: #00AEEF;
+$green: #71bf44;
+$blue: #00aeef;
 $light-blue: #00679f;
-$aquamarine: #81DDF1;
-$gray: #C0C0C0;
-$dark-blue: #1A2D74;
-$text: #FFFFFF;
+$aquamarine: #81ddf1;
+$gray: #c0c0c0;
+$dark-blue: #1a2d74;
+$text: #ffffff;
 
 // char
 $chat-input-width: 800px;
