--- a/src/pages/ChatPage/styles.module.scss
+++ b/src/pages/ChatPage/styles.module.scss
@@ -7,114 +7,110 @@ $button-width: 200px;
 $grid-vertical-gap: 10px;
 $grid-horizontal-gap: 20px;
 
-$horizontal-padding: calc(
-  50vw - constants.$chat-input-width / 2
-);
+$horizontal-padding: calc(50vw - constants.$chat-input-width / 2);
 
 $files-horizontal-gap: 10px;
 $clip-size: 33px;
 
 @mixin customPadding($only-left: true) {
-  @if $only-left == true {
-    padding-left: $horizontal-padding;
-  } 
-  @else {
-    padding: 0 $horizontal-padding;
-  }
+	@if $only-left == true {
+		padding-left: $horizontal-padding;
+	} @else {
+		padding: 0 $horizontal-padding;
+	}
 }
 
 .chatWrapper {
-  display: grid;
-  height: calc(100vh - constants.$header-vh);
+	display: grid;
+	height: calc(100vh - constants.$header-vh);
 
-  .messages {
-    overflow-y: auto;
-    flex-direction: column-reverse;
+	.messages {
+		overflow-y: auto;
+		flex-direction: column-reverse;
 
-    font-size: constants.$secondary-font-size;
-    font-weight: constants.$secondary-font-weight;
-    color: constants.$dark-blue;
+		font-size: constants.$secondary-font-size;
+		font-weight: constants.$secondary-font-weight;
+		color: constants.$dark-blue;
 
-    .message {
-      @include customPadding($only-left: false);
-      width: constants.$chat-input-width;
+		.message {
+			@include customPadding($only-left: false);
+			width: constants.$chat-input-width;
 
-      &.green {
-        background: constants.$light-green;
-      }
-    }
-  }
+			&.green {
+				background: constants.$light-green;
+			}
+		}
+	}
 
-  .input {
-    @include customPadding;
+	.input {
+		@include customPadding;
 
-    position: relative;
+		position: relative;
 
-    display: grid;
-    grid-template-columns: constants.$chat-input-width $button-width;
-    grid-template-rows: repeat(3, 1fr);
-    gap: $grid-vertical-gap $grid-horizontal-gap;
+		display: grid;
+		grid-template-columns: constants.$chat-input-width $button-width;
+		grid-template-rows: repeat(3, 1fr);
+		gap: $grid-vertical-gap $grid-horizontal-gap;
 
-    width: max(
-      calc(100vw - $horizontal-padding),
-      calc(constants.$chat-input-width
-           + $button-width + $grid-horizontal-gap)
-    );
-    height: $input-height;
+		width: max(
+			calc(100vw - $horizontal-padding),
+			calc(constants.$chat-input-width + $button-width + $grid-horizontal-gap)
+		);
+		height: $input-height;
 
-    align-self: flex-end;
+		align-self: flex-end;
 
-    padding-block: $input-vertical-padding;
+		padding-block: $input-vertical-padding;
 
-    background: constants.$blue;
+		background: constants.$blue;
 
-    .textarea {     
-      position: relative;  
-      grid-column: 1;
-      grid-row: 1 / 4;
+		.textarea {
+			position: relative;
+			grid-column: 1;
+			grid-row: 1 / 4;
 
-      textarea {
-        width: calc(100% - 8px); // to compensate border and margin
-        height: calc(100% - 8px);
+			textarea {
+				width: calc(100% - 8px); // to compensate border and margin
+				height: calc(100% - 8px);
 
-        font-size: constants.$primary-font-size;
-        resize: none;
-      }
+				font-size: constants.$primary-font-size;
+				resize: none;
+			}
 
-      // svg clip icon
-      .clipIcon {
-        cursor: pointer;
-        position: absolute;
-        bottom: 0;
-        right: 0;
+			// svg clip icon
+			.clipIcon {
+				cursor: pointer;
+				position: absolute;
+				bottom: 0;
+				right: 0;
 
-        height: $clip-size;
-      }  
+				height: $clip-size;
+			}
 
-      // uploaded files
-      .uploadedFiles {
-        position: absolute;
-        bottom: 0;
-        left: 10px;
+			// uploaded files
+			.uploadedFiles {
+				position: absolute;
+				bottom: 0;
+				left: 10px;
 
-        width: calc(100% - $clip-size);
-        
-        line-height: $clip-size;
+				width: calc(100% - $clip-size);
 
-        display: flex;
-        justify-content: start;
+				line-height: $clip-size;
 
-        gap: $files-horizontal-gap;
+				display: flex;
+				justify-content: start;
 
-        // word icon
-        svg,
-        .text {
-          height: $clip-size;
-          
-          vertical-align: middle;
-          display: inline-block;
-        }
-      }
-    }   
-  }
+				gap: $files-horizontal-gap;
+
+				// word icon
+				svg,
+				.text {
+					height: $clip-size;
+
+					vertical-align: middle;
+					display: inline-block;
+				}
+			}
+		}
+	}
 }
