--- a/src/pages/ChatPage/styles.module.scss
+++ b/src/pages/ChatPage/styles.module.scss
@@ -25,8 +25,10 @@ $clip-size: 33px;
 	height: calc(100vh - constants.$header-vh);
 
 	.messages {
-		overflow-y: auto;
+		display: flex;
 		flex-direction: column-reverse;
+
+		overflow-y: auto;
 
 		font-size: constants.$secondary-font-size;
 		font-weight: constants.$secondary-font-weight;
