BaseApi::GetAccessToken fix - now after 0.5s it will try to refresh tokens, after another 0.5s will try to signIn and only after this will reject Promise; Small style fixes: order of messages in state was reversed to avoid using flexbox in messagesWrapper

--- a/src/pages/ChatPage/styles.module.scss
+++ b/src/pages/ChatPage/styles.module.scss
@@ -25,8 +25,8 @@ $clip-size: 33px;
 	height: calc(100vh - constants.$header-vh);
 
 	.messages {
-		display: flex;
-		flex-direction: column-reverse;
+		// display: flex;
+		// flex-direction: column-reverse;
 
 		overflow-y: auto;
 
