--- a/src/pages/SupportPage/styles.module.scss
+++ b/src/pages/SupportPage/styles.module.scss
@@ -1,6 +1,10 @@
 $questions-block-width: 920px;
 $questions-block-title-font-size: 40px;
 
+.blue {
+	color: #00aeef;
+}
+
 .questions {
 	width: $questions-block-width;
 	line-height: 22px;
@@ -11,5 +15,23 @@ $questions-block-title-font-size: 40px;
 
 	.questionTitle {
 		font-size: $questions-block-title-font-size;
+	}
+}
+
+.contactsData {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+
+	width: $questions-block-width;
+
+	.col {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+
+		svg {
+			transform: translate(0, 15%);
+		}
 	}
 }
