--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -26,3 +26,6 @@ $text: #ffffff;
 
 // char
 $chat-input-width: 800px;
+
+// margin top and bottom of <p> element which contains message text
+$margin-to-bottom-of-message-text: 8px;
