--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -1,4 +1,5 @@
 // GENERAL CONSTANTS
+$horizontal-margin-for-phone: 20px;
 $phone-width-breakpoint: 481px;
 $header-vh: 52px;
 
@@ -7,6 +8,7 @@ $primary-font-weight: 700;
 $secondary-font-weight: 400;
 
 $header-font-size: 40px;
+$phone-header-font-size: 30px;
 $primary-font-size: 20px;
 $secondary-font-size: 16px;
 
