--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -8,9 +8,11 @@ $primary-font-weight: 700;
 $secondary-font-weight: 400;
 
 $header-font-size: 40px;
-$phone-header-font-size: 30px;
 $primary-font-size: 20px;
 $secondary-font-size: 16px;
+
+$phone-header-font-size: 30px;
+$phone-primary-font-size: 25px;
 
 // z-index
 $background-z: 1;
