--- a/src/utils/_constants.scss
+++ b/src/utils/_constants.scss
@@ -22,11 +22,8 @@ $interface-z: 3;
 // colors
 $light-green: rgba(113, 191, 68, 0.3);
 $green: #71bf44;
-$blue: #00aeef;
-$light-blue: #00679f;
 $aquamarine: #81ddf1;
 $gray: #c0c0c0;
-$dark-blue: #1a2d74;
 $text: #ffffff;
 
 // char
@@ -34,3 +31,46 @@ $chat-input-width: 800px;
 
 // margin top and bottom of <p> element which contains message text
 $margin-to-bottom-of-message-text-and-files: 8px;
+
+// Rework
+$dark-blue: #00153f;
+$blue: #3071e7;
+$light-blue: #00679f;
+$red: #cd4e5c;
+
+$colors: (
+  "dark-blue": $dark-blue,
+  "blue": $blue,
+  "light-blue": $light-blue,
+  "red": $red,
+);
+
+$primary-text-color: #080c25;
+$secondary-text-color: #ffffff;
+$attention-text-color: $red;
+
+$text-colors: (
+  "primary": $primary-text-color,
+  "secondary": $secondary-text-color,
+  "attention": $attention-text-color,
+);
+
+$font-size-xl: 40px;
+$font-size-l: 20px;
+$font-size-m: 16px;
+$font-size-s: 24px;
+$font-size-xs: 12px;
+
+@mixin colors {
+  @each $color, $value in $colors {
+    .bg-#{$color} {
+      background-color: $value;
+    }
+  }
+
+  @each $color, $value in $text-colors {
+    .text-#{$color} {
+      color: $value;
+    }
+  }
+}
