--- a/src/components/BlockedPage/styles.module.scss
+++ b/src/components/BlockedPage/styles.module.scss
@@ -1,10 +1,9 @@
-@use "../../utils/constants";
+@use "../../utils/constants" as c;
 
 $padding-top: 40px;
-$padding-bottom: 100px;
 
 $inner-gap: 30px;
-$outer-gap: 60px;
+$outer-gap: 95px;
 
 @mixin vertical-flexbox($gap) {
   display: flex;
@@ -12,43 +11,33 @@ $outer-gap: 60px;
   gap: $gap;
 }
 
-@mixin with-title {
-  .title {
-    text-align: center;
-    font-size: constants.$header-font-size;
-
-    @media screen and (max-width: constants.$phone-width-breakpoint) {
-      font-size: constants.$phone-header-font-size;
-    }
-
-    span {
-      color: constants.$green;
-    }
-  }
-}
-
 .wrapper {
   @include vertical-flexbox($outer-gap);
-  position: absolute;
-
-  @media screen and (min-width: constants.$phone-width-breakpoint) {
+  @media screen and (min-width: c.$phone-width-breakpoint) {
     width: 100vw;
   }
+  @media screen and (max-width: c.$phone-width-breakpoint) {
+    width: calc(100vw - 2 * c.$horizontal-margin-for-phone);
 
-  padding-top: $padding-top;
-  padding-bottom: $padding-bottom; // to create some space in the bottom
-
-  @media screen and (max-width: constants.$phone-width-breakpoint) {
-    width: calc(100vw - 2 * constants.$horizontal-margin-for-phone);
-
-    padding-left: constants.$horizontal-margin-for-phone;
-    padding-right: constants.$horizontal-margin-for-phone;
+    padding-left: c.$horizontal-margin-for-phone;
+    padding-right: c.$horizontal-margin-for-phone;
   }
 
+  position: absolute;
+  padding-top: $padding-top;
   align-items: center;
 
   & > div {
     @include vertical-flexbox($inner-gap);
-    @include with-title();
+  }
+}
+
+.title {
+  text-align: center;
+  font-size: c.$font-size-xl;
+  color: c.$dark-blue;
+
+  span {
+    color: c.$primary-text-color;
   }
 }
