--- a/src/components/NavigationLink/styles.module.scss
+++ b/src/components/NavigationLink/styles.module.scss
@@ -1,4 +1,5 @@
-@use "../../utils/constants";
+@use "../../utils/constants" as c;
+@include c.colors;
 
 .link {
   min-width: 90px;
@@ -6,17 +7,21 @@
 
   padding: 0 20px;
 
-  line-height: constants.$header-vh;
+  line-height: c.$header-vh;
 
   text-align: center;
-  color: constants.$text;
+  color: c.$text;
 
   &:hover {
     cursor: pointer;
-    background-color: constants.$light-blue;
+    background-color: c.$light-blue;
   }
 
   &.active {
-    background-color: constants.$blue;
+    background-color: c.$blue;
+  }
+
+  &.round {
+    border-radius: 30px;
   }
 }
