--- a/src/index.scss
+++ b/src/index.scss
@@ -1,29 +1,19 @@
-@use "./utils/constants";
+@use "./utils/constants" as c;
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-weight: constants.$primary-font-weight;
-  font-size: constants.$primary-font-size;
+  // century-gothic
+  font-family: sans-serif;
+  font-weight: c.$primary-font-weight;
+  font-size: c.$primary-font-size;
+  color: c.$dark-blue;
 
   background-image: url(./assets/background.svg);
   background-size: 100vw auto;
-  background-attachment: fixed;
 
   overflow-x: hidden;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-main {
-  position: absolute;
-  top: constants.$header-vh;
 }
