--- a/src/containers/SupportPage/styles.module.scss
+++ b/src/containers/SupportPage/styles.module.scss
@@ -1,4 +1,5 @@
-@use "../../utils/constants";
+@use "../../utils/constants" as c;
+@include c.colors;
 
 $questions-block-width: 920px;
 $questions-block-title-font-size: 40px;
@@ -8,7 +9,7 @@ $questions-block-title-font-size: 40px;
 }
 
 .questions {
-  @media screen and (min-width: constants.$phone-width-breakpoint) {
+  @media screen and (min-width: c.$phone-width-breakpoint) {
     width: $questions-block-width;
   }
   line-height: 22px;
@@ -21,9 +22,9 @@ $questions-block-title-font-size: 40px;
     font-size: $questions-block-title-font-size;
     line-height: $questions-block-title-font-size;
 
-    @media screen and (max-width: constants.$phone-width-breakpoint) {
-      font-size: constants.$phone-primary-font-size;
-      line-height: constants.$phone-primary-font-size;
+    @media screen and (max-width: c.$phone-width-breakpoint) {
+      font-size: c.$phone-primary-font-size;
+      line-height: c.$phone-primary-font-size;
     }
   }
 }
@@ -33,7 +34,7 @@ $questions-block-title-font-size: 40px;
   flex-direction: row;
   justify-content: space-between;
 
-  @media screen and (min-width: constants.$phone-width-breakpoint) {
+  @media screen and (min-width: c.$phone-width-breakpoint) {
     width: $questions-block-width;
   }
 
